Memo Nicknamesを翻訳 UI崩れるかも

--- a/html/src/localization/ja/en.json
+++ b/html/src/localization/ja/en.json
@@ -270,8 +270,8 @@
                     "theme_mode_material3": "Material 3",
                     "zoom": "ズーム",
                     "vrcplus_profile_icons": "VRC+ プロフィールアイコン",
-                    "tooltips": "Tooltips",
-                    "nicknames": "Memo Nicknames",
+                    "tooltips": "ツールチップ",
+                    "nicknames": "ニックネームにメモを表示",
                     "sort_favorite_by": "お気に入りを並び替え:",
                     "sort_favorite_by_name": "名前順",
                     "sort_favorite_by_date": "日付順",
