--- a/html/src/localization/ja/en.json
+++ b/html/src/localization/ja/en.json
@@ -306,8 +306,8 @@
                 },
                 "user_dialog": {
                     "header": "ユーザーダイアログ",
-                    "vrchat_notes": "VRChat Notes",
-                    "vrcx_memos": "VRCX Memos",
+                    "vrchat_notes": "VRChatのノートを表示",
+                    "vrcx_memos": "VRCXのメモを表示",
                     "export_vrcx_memos_into_vrchat_notes": "VRCXのメモをVRChatのノートにエクスポート",
                     "export_notes": "ノートをエクスポート"
                 },
