--- a/html/src/localization/zh-TW/en.json
+++ b/html/src/localization/zh-TW/en.json
@@ -794,6 +794,7 @@
                 "download_package": "下載 Unity Package",
                 "delete": "刪除",
                 "delete_impostor": "Delete Impostor",
+                "regenerate_impostor": "Regenerate Impostor",
                 "create_impostor": "Create Impostor"
             },
             "info": {
