Linux specific localisation strings

--- a/src/localization/zh-CN/en.json
+++ b/src/localization/zh-CN/en.json
@@ -344,6 +344,7 @@
                         "overlay_notifications": "叠加界面通知",
                         "notification_position": "通知位置",
                         "xsoverlay_notifications": "XSOverlay 通知",
+                        "wlxoverlay_notifications": "WlxOverlay 通知",
                         "ovrtoolkit_hud_notifications": "OVR Toolkit HUD 通知",
                         "ovrtoolkit_wrist_notifications": "OVR Toolkit 手腕通知",
                         "user_images": "显示用户头像（较慢）",
