Linux specific localisation strings

--- a/src/localization/en/en.json
+++ b/src/localization/en/en.json
@@ -410,6 +410,7 @@
                         "overlay_notifications": "Overlay Notifications",
                         "notification_position": "Notification Position",
                         "xsoverlay_notifications": "XSOverlay Notifications",
+                        "wlxoverlay_notifications": "WlxOverlay Notifications",
                         "ovrtoolkit_hud_notifications": "OVR Toolkit HUD Notifications",
                         "ovrtoolkit_wrist_notifications": "OVR Toolkit Wrist Notifications",
                         "user_images": "User Images (slower)",
