"отпечатки" to "принты"

--- a/html/src/localization/ru/en.json
+++ b/html/src/localization/ru/en.json
@@ -440,7 +440,7 @@
                     "save_instance_prints_to_file": {
                         "header": "Сохранить снимки инстанса в файл",
                         "header_tooltip": "Требуется \"--enable-sdk-log-levels\" опция запуска VRC.",
-                        "description": "Сохраните созданные отпечатки в папке «Изображения VRChat»."
+                        "description": "Сохраните созданные принты в папке «Изображения VRChat»."
                     },
                     "save_instance_stickers_to_file": {
                         "header": "Сохранить стикеры инстанса в файл",
@@ -516,7 +516,7 @@
                    "user_generated_content": {
                    "header": "Пользовательский контент",
                    "folder": "Открыть папку",
-                   "description": "Откройте или укажите папку, где хранится контент, такой как 'Отпечатки' и 'Стикеры'.",
+                   "description": "Откройте или укажите папку, где хранится контент, такой как 'Принты' и 'Стикеры'.",
                    "set_folder": "Указать папку",
                    "reset_override": "Сбросить"
                 }
