--- a/html/src/localization/cs/en.json
+++ b/html/src/localization/cs/en.json
@@ -2,17 +2,17 @@
     "language": "Čeština (CS)",
     "translator": "-",
     "nav_tooltip": {
-        "feed": "Feed",
-        "game_log": "Game Log",
-        "player_list": "Player List",
-        "search": "Search",
-        "favorites": "Favorites",
-        "friend_log": "Friend Log",
-        "moderation": "Moderation",
-        "notification": "Notification",
-        "friend_list": "Friend List",
-        "profile": "Profile",
-        "settings": "Settings"
+        "feed": "Zdroj",
+        "game_log": "Záznam hry",
+        "player_list": "Seznam hráčů",
+        "search": "Vyhledávání",
+        "favorites": "Oblíbené",
+        "friend_log": "Záznam přátel",
+        "moderation": "Moderace",
+        "notification": "Upozornění",
+        "friend_list": "Seznam přátel",
+        "profile": "Profil",
+        "settings": "Nastavení"
     },
     "view": {
         "login": {
@@ -33,75 +33,75 @@
         },
         "feed": {
             "favorites_only_tooltip": "Zobrazit pouze oblíbené",
-            "filter_placeholder": "Filter",
-            "search_placeholder": "Vyhledávání"
+            "filter_placeholder": "Filtrovat",
+            "search_placeholder": "Vyhledat"
         },
         "game_log": {
-            "filter_placeholder": "Filter",
-            "search_placeholder": "Vyhledávání"
+            "filter_placeholder": "Filtrovat",
+            "search_placeholder": "Vyhledat"
         },
         "player_list": {
             "photon": {
-                "current": "Current",
-                "previous": "Previous",
-                "search_placeholder": "Search",
-                "filter_placeholder": "Filter",
-                "chatbox_blacklist": "Chatbox Blacklist",
+                "current": "Aktuální",
+                "previous": "Předchozí",
+                "search_placeholder": "Vyhledat",
+                "filter_placeholder": "Filtrovat",
+                "chatbox_blacklist": "Černá listina herního chatu",
                 "status_tooltip": "VRCX Companion Status"
             }
         },
         "search": {
-            "search_placeholder": "Vyhledávání",
-            "clear_results_tooltip": "Clear Search Results",
+            "search_placeholder": "Vyhledat",
+            "clear_results_tooltip": "Vymazat výsledky vyhledávání",
             "user": {
                 "header": "User"
             },
             "world": {
-                "header": "World",
+                "header": "Svět",
                 "category": "Vyhledávání dle kategorie",
                 "community_lab": "Include community labs"
             },
             "avatar": {
                 "header": "Avatar",
                 "search_provider": "Search Provider",
-                "refresh_tooltip": "Refresh own avatars",
-                "result_count": "Results {count}",
-                "all": "All",
-                "public": "Public",
-                "private": "Private",
-                "local": "Local",
-                "remote": "Remote",
-                "sort_name": "Sort by name",
-                "sort_update": "Sort by update",
-                "sort_created": "Sort by created"
+                "refresh_tooltip": "Obnovit vlastní avatar",
+                "result_count": "Výsledky {count}",
+                "all": "VŠE",
+                "public": "Veřejný",
+                "private": "Soukromý",
+                "local": "Lokální",
+                "remote": "Vzdálený",
+                "sort_name": "Seřadit dle jména",
+                "sort_update": "Seřadit dle změny",
+                "sort_created": "Seřadit dle vytvoření"
             },
             "group": {
-                "header": "Group"
+                "header": "Skupina"
             },
-            "prev_page": "Prev",
-            "next_page": "Next"
+            "prev_page": "Zpět",
+            "next_page": "Další"
         },
         "favorite": {
             "friends": {
-                "header": "Friends"
+                "header": "Přátelé"
             },
             "worlds": {
-                "header": "Worlds",
-                "search": "Search",
-                "vrchat_favorites": "VRChat Favorites",
-                "local_favorites": "Local Favorites",
+                "header": "Světy",
+                "search": "Vyhledávání",
+                "vrchat_favorites": "VRChat Oblíbené",
+                "local_favorites": "Local Oblíbené",
                 "new_group": "New Group",
                 "refresh": "Refresh",
                 "cancel_refresh": "Cancel Refresh"
             },
             "avatars": {
-                "header": "Avatars",
-                "search": "Search",
-                "vrchat_favorites": "VRChat Favorites",
-                "local_favorites": "Local Favorites (Requires VRC+)",
-                "new_group": "New Group",
-                "refresh": "Refresh",
-                "cancel_refresh": "Cancel Refresh"
+                "header": "Avatary",
+                "search": "Vyhledávání",
+                "vrchat_favorites": "VRChat Oblíbené",
+                "local_favorites": "Lokální Oblíbené (Potřeba VRC+)",
+                "new_group": "Nová skupina",
+                "refresh": "Obnovit",
+                "cancel_refresh": "Zrušit obnovení"
             },
             "edit_mode": "Edit Mode",
             "copy": "Copy",
@@ -124,62 +124,62 @@
             "select_avatar_tooltip": "Select Avatar"
         },
         "friend_log": {
-            "filter_placeholder": "Filter",
-            "search_placeholder": "Search"
+            "filter_placeholder": "Filtrovat",
+            "search_placeholder": "Vyhledat"
         },
         "moderation": {
-            "filter_placeholder": "Filter",
-            "search_placeholder": "Search",
-            "refresh_tooltip": "Refresh"
+            "filter_placeholder": "Filtrovat",
+            "search_placeholder": "Vyhledat",
+            "refresh_tooltip": "Obnovit"
         },
         "notification": {
-            "filter_placeholder": "Filter",
-            "search_placeholder": "Search",
-            "refresh_tooltip": "Refresh"
+            "filter_placeholder": "Filtrovat",
+            "search_placeholder": "Vyhledat",
+            "refresh_tooltip": "Obnovit"
         },
         "friend_list": {
-            "header": "Friend List",
+            "header": "Seznam přátel",
             "bulk_unfriend": "Bulk Unfriend Mode",
             "bulk_unfriend_selection": "Bulk Unfriend Selection",
             "load": "Load missing entries",
-            "load_tooltip": "Load",
-            "favorites_only_tooltip": "Filter favorites only",
-            "search_placeholder": "Search",
-            "filter_placeholder": "Filter",
-            "refresh_tooltip": "Refresh",
-            "clear_tooltip": "Clear Results",
-            "cancel_tooltip": "Cancel"
+            "load_tooltip": "Načíst",
+            "favorites_only_tooltip": "Zobrazit pouze oblíbené",
+            "search_placeholder": "Vyhledat",
+            "filter_placeholder": "Filtrovat",
+            "refresh_tooltip": "Obnovit",
+            "clear_tooltip": "Vymazat výsledky",
+            "cancel_tooltip": "Zrušit"
         },
         "profile": {
             "profile": {
-                "header": "Profile",
-                "last_activity": "Last Activity",
-                "two_factor": "Two-Factor Auth (2FA)",
-                "two_factor_enabled": "Enabled",
-                "two_factor_disabled": "Disabled",
+                "header": "Profil",
+                "last_activity": "Poslední aktivita",
+                "two_factor": "Dvou-fázové ověření (2FA)",
+                "two_factor_enabled": "Aktivováno",
+                "two_factor_disabled": "Deaktivováno",
                 "v_bucks": "V-Bucks",
-                "refresh": "Click to refresh",
-                "logout": "Logout",
+                "refresh": "Obnovit",
+                "logout": "Odhlásit se",
                 "manage_gallery_icon": "Manage Photos/Icons/Emojis/Stickers",
-                "export_friend_list": "Export Friends List",
-                "export_own_avatars": "Export Own Avatars",
-                "discord_names": "Discord Names",
-                "export_notes": "Export Notes"
+                "export_friend_list": "Exportovat seznam přátel",
+                "export_own_avatars": "Exportovat vlastní avatary",
+                "discord_names": "Discord Jména",
+                "export_notes": "Exportovat Poznámky "
             },
             "game_info": {
-                "header": "Game Info",
-                "online_users": "Online Users",
-                "user_online": "{count} users online.",
-                "refresh": "Click to refresh"
+                "header": "Herní Info",
+                "online_users": "Online Hráči",
+                "user_online": "{count} hráčů online.",
+                "refresh": "Obnovit"
             },
             "vrc_sdk_downloads": {
-                "header": "VRC SDK Downloads"
+                "header": "VRC SDK Stažené"
             },
             "direct_access": {
-                "header": "Direct Access",
-                "username": "Username",
+                "header": "Přímý přístup",
+                "username": "Jméno",
                 "user_id": "User ID",
-                "world_instance": "World/Instance",
+                "world_instance": "Svět/Server",
                 "avatar": "Avatar"
             },
             "invite_messages": "Invite Messages",
@@ -194,7 +194,7 @@
             "clear_results_tooltip": "Clear results"
         },
         "settings": {
-            "header": "Settings",
+            "header": "Nastavení",
             "category": {
                 "general": "General",
                 "appearance": "Appearance",
