--- a/html/src/localization/cs/en.json
+++ b/html/src/localization/cs/en.json
@@ -47,23 +47,23 @@
                 "search_placeholder": "Vyhledat",
                 "filter_placeholder": "Filtrovat",
                 "chatbox_blacklist": "Černá listina herního chatu",
-                "status_tooltip": "VRCX Companion Status"
+                "status_tooltip": "Stav VRCX Companion"
             }
         },
         "search": {
             "search_placeholder": "Vyhledat",
             "clear_results_tooltip": "Vymazat výsledky vyhledávání",
             "user": {
-                "header": "User"
+                "header": "Uživatel"
             },
             "world": {
                 "header": "Svět",
                 "category": "Vyhledávání dle kategorie",
-                "community_lab": "Include community labs"
+                "community_lab": "Zahrnout Community Labs"
             },
             "avatar": {
                 "header": "Avatar",
-                "search_provider": "Search Provider",
+                "search_provider": "Poskytovatel vyhledávání",
                 "refresh_tooltip": "Obnovit vlastní avatar",
                 "result_count": "Výsledky {count}",
                 "all": "VŠE",
@@ -78,7 +78,7 @@
             "group": {
                 "header": "Skupina"
             },
-            "prev_page": "Zpět",
+            "prev_page": "Předchozí",
             "next_page": "Další"
         },
         "favorite": {
@@ -89,10 +89,10 @@
                 "header": "Světy",
                 "search": "Vyhledávání",
                 "vrchat_favorites": "VRChat Oblíbené",
-                "local_favorites": "Local Oblíbené",
-                "new_group": "New Group",
-                "refresh": "Refresh",
-                "cancel_refresh": "Cancel Refresh"
+                "local_favorites": "Lokální Oblíbené",
+                "new_group": "Nová skupina",
+                "refresh": "Obnovit",
+                "cancel_refresh": "Zrušit obnovení"
             },
             "avatars": {
                 "header": "Avatary",
@@ -103,25 +103,25 @@
                 "refresh": "Obnovit",
                 "cancel_refresh": "Zrušit obnovení"
             },
-            "edit_mode": "Edit Mode",
-            "copy": "Copy",
-            "clear": "Clear",
-            "bulk_unfavorite": "Bulk Unfavorite",
-            "refresh_tooltip": "Refresh all favorites",
-            "export": "Export",
-            "import": "Import",
-            "move_tooltip": "Move",
-            "copy_tooltip": "Copy",
-            "self_invite_tooltip": "Self Invite",
-            "unfavorite_tooltip": "Unfavorite",
-            "visibility_tooltip": "Change Visibility",
-            "rename_tooltip": "Rename",
-            "clear_tooltip": "Clear",
-            "delete_tooltip": "Delete",
-            "unavailable_tooltip": "Unavailable",
-            "private": "Private",
-            "sort_by": "Sort By",
-            "select_avatar_tooltip": "Select Avatar"
+            "edit_mode": "Režim úprav",
+            "copy": "Kopírovat",
+            "clear": "Vymazat",
+            "bulk_unfavorite": "Hromadné odebrání z oblíbených",
+            "refresh_tooltip": "Obnovit všechny oblíbené",
+            "export": "Exportovat",
+            "import": "Importovat",
+            "move_tooltip": "Přesunout",
+            "copy_tooltip": "Kopírovat",
+            "self_invite_tooltip": "Pozvat sebe",
+            "unfavorite_tooltip": "Odebrat z oblíbených",
+            "visibility_tooltip": "Změnit viditelnost",
+            "rename_tooltip": "Přejmenovat",
+            "clear_tooltip": "Vymazat",
+            "delete_tooltip": "Smazat",
+            "unavailable_tooltip": "Nedostupný",
+            "private": "Soukromý",
+            "sort_by": "Seřadit podle",
+            "select_avatar_tooltip": "Vybrat avatar"
         },
         "friend_log": {
             "filter_placeholder": "Filtrovat",
@@ -139,9 +139,9 @@
         },
         "friend_list": {
             "header": "Seznam přátel",
-            "bulk_unfriend": "Bulk Unfriend Mode",
-            "bulk_unfriend_selection": "Bulk Unfriend Selection",
-            "load": "Load missing entries",
+            "bulk_unfriend": "Hromadné odebrání přátel",
+            "bulk_unfriend_selection": "Výběr hromadného odebrání přátel",
+            "load": "Načíst chybějící položky",
             "load_tooltip": "Načíst",
             "favorites_only_tooltip": "Zobrazit pouze oblíbené",
             "search_placeholder": "Vyhledat",
@@ -178,85 +178,85 @@
             "direct_access": {
                 "header": "Přímý přístup",
                 "username": "Jméno",
-                "user_id": "User ID",
+                "user_id": "ID Uživatele",
                 "world_instance": "Svět/Server",
                 "avatar": "Avatar"
             },
-            "invite_messages": "Invite Messages",
-            "invite_response_messages": "Invite Response Messages",
-            "invite_request_messages": "Invite Request Messages",
-            "invite_request_response_messages": "Invite Request Response Messages",
-            "past_display_names": "Past Display Names",
-            "config_json": "Config JSON",
-            "current_user_json": "Current User JSON",
-            "feedback": "Feedback",
-            "refresh_tooltip": "Refresh",
-            "clear_results_tooltip": "Clear results"
+            "invite_messages": "Zprávy poznámek",
+            "invite_response_messages": "Zprávy odpovědí na pozvánku",
+            "invite_request_messages": "Zprávy žádostí o pozvání",
+            "invite_request_response_messages": "Zprávý odpovědí na žádost o pozvání",
+            "past_display_names": "Minulé přezdívky",
+            "config_json": "Konfigurační JSON",
+            "current_user_json": "Aktuální Uživatelské JSON",
+            "feedback": "Zpětná vazba",
+            "refresh_tooltip": "Obnovit",
+            "clear_results_tooltip": "Vymazat výsledky"
         },
         "settings": {
             "header": "Nastavení",
             "category": {
-                "general": "General",
-                "appearance": "Appearance",
-                "notifications": "Notifications",
-                "wrist_overlay": "Wrist Overlay",
+                "general": "Obecné",
+                "appearance": "Vzhled",
+                "notifications": "Oznámení",
+                "wrist_overlay": "Náramkový overlay",
                 "discord_presence": "Discord Presence",
-                "advanced": "Advanced"
+                "advanced": "Pokročilé"
             },
             "general": {
                 "general": {
-                    "header": "General",
-                    "version": "Version",
-                    "latest_app_version": "Latest Version",
-                    "latest_app_version_refresh": "Click to refresh",
-                    "repository_url": "Repository URL",
-                    "support": "Support"
+                    "header": "Obecné",
+                    "version": "Verze",
+                    "latest_app_version": "Nejnovější verze",
+                    "latest_app_version_refresh": "Klikněte pro obnovení",
+                    "repository_url": "URL Repozitáře",
+                    "support": "Podpora"
                 },
                 "vrcx_updater": {
-                    "header": "VRCX Updater",
-                    "change_build": "Change build",
-                    "update_action": "Update action",
-                    "auto_update_off": "Off",
-                    "auto_update_notify": "Notify",
-                    "auto_update_download": "Auto Download",
-                    "change_log": "Change Log"
+                    "header": "VRCX Aktualizátor",
+                    "change_build": "Změnit verzi",
+                    "update_action": "Aktualizace",
+                    "auto_update_off": "Vypnuto",
+                    "auto_update_notify": "Oznámit",
+                    "auto_update_download": "Automatické stažení",
+                    "change_log": "Historie změn"
                 },
                 "application": {
-                    "header": "Application",
-                    "startup": "Start at Windows startup",
-                    "minimized": "Start minimized",
-                    "tray": "Minimize to tray when closing",
-                    "disable_gpu_acceleration": "Disable GPU Acceleration",
-                    "disable_gpu_acceleration_tooltip": "Only change this option if you know what you're doing, breaks SteamVR overlay, may fix issues with UI, requires restarting VRCX",
-                    "disable_vr_overlay_gpu_acceleration": "Disable VR Overlay GPU Acceleration",
-                    "disable_vr_overlay_gpu_acceleration_tooltip": "VR Overlay GPU acceleration can cause VRCX to crash or cause VRAM memory leaks, requires restarting VRCX",
-                    "proxy": "Proxy settings"
+                    "header": "Aplikace",
+                    "startup": "Spustit při startu Windows",
+                    "minimized": "Spustit minimalizované",
+                    "tray": "Minimalizovat do systémové lišty při zavření",
+                    "disable_gpu_acceleration": "Vypnout GPU Akceleraci",
+                    "disable_gpu_acceleration_tooltip": "Tuto možnost změnte pouze, pokud víte co děláte, narušujete SteamVR Overlay, může opravit UI problémy, vyžaduje restart VRCX",
+                    "disable_vr_overlay_gpu_acceleration": "Vypnout GPU akceleraci VR Overlay",
+                    "disable_vr_overlay_gpu_acceleration_tooltip": "GPU akcelerace VR překrytí může působit pád VRCX nebo VRAM Leaking, vyžaduje restart VRCX",
+                    "proxy": "Nastavení proxy"
                 },
                 "favorites": {
-                    "header": "VRCX Favorite Friends",
-                    "group_placeholder": "Choose Groups"
+                    "header": "VRCX Oblíbení přátelé",
+                    "group_placeholder": "Vybrat skupiny"
                 },
                 "logging": {
-                    "header": "Logging",
-                    "resource_load": "Log Udon string/image load",
-                    "empty_avatar": "Log avatars in feed without names"
+                    "header": "Záznamy",
+                    "resource_load": "Záznam načítání Udon nápisů/obrázků",
+                    "empty_avatar": "Záznam avatarů v kanálu bez jmen"
                 },
                 "automation": {
-                    "header": "Automation",
-                    "auto_change_status": "Auto Change Status",
-                    "auto_state_change_tooltip": "Automatically change status when there are other people in the instance (Alone / Company)",
-                    "alone_condition": "Alone Condition",
-                    "alone": "Alone",
-                    "no_friends": "No Friends",
-                    "alone_status": "Alone Status",
-                    "company_status": "Company Status",
-                    "allowed_instance_types": "Allowed Instance Types",
-                    "instance_type_placeholder": "All Instance Types",
-                    "auto_invite_request_accept": "Auto Accept Invite Requests",
-                    "auto_invite_request_accept_tooltip": "Automatically accept invite requests from favorite friends",
-                    "auto_invite_request_accept_off": "Off",
-                    "auto_invite_request_accept_favs": "All Favorites",
-                    "auto_invite_request_accept_selected_favs": "VRCX Favorites"
+                    "header": "Automatizace",
+                    "auto_change_status": "Automaticky měnit status",
+                    "auto_state_change_tooltip": "Automaticky změnit status když v instanci jsou další lidé (Sám / Společnost)",
+                    "alone_condition": "Kondice pro samotného",
+                    "alone": "Sám",
+                    "no_friends": "Žádní přátelé",
+                    "alone_status": "Stav 'sám'",
+                    "company_status": "Stav 'společnost'",
+                    "allowed_instance_types": "POvolené typy instancí",
+                    "instance_type_placeholder": "Všechny typy instancí",
+                    "auto_invite_request_accept": "Automaticky přijímat žádosti o pozvání",
+                    "auto_invite_request_accept_tooltip": "Automaticky přijímat žádosti o pozvání od oblíbených přátel",
+                    "auto_invite_request_accept_off": "Vypnuto",
+                    "auto_invite_request_accept_favs": "Všichni oblíbení",
+                    "auto_invite_request_accept_selected_favs": "VRCX oblíbení"
                 },
                 "legal_notice": {
                     "header": "Legal Notice",
