--- a/html/src/localization/cz/en.json
+++ b/html/src/localization/cz/en.json
@@ -1,5 +1,5 @@
 {
-    "language": "Čeština (CS)",
+    "language": "Čeština (CZ)",
     "translator": "-",
     "nav_tooltip": {
         "feed": "Zdroj",
