--- a/html/src/localization/en/en.json
+++ b/html/src/localization/en/en.json
@@ -854,6 +854,7 @@
                 "last_updated": "Last Updated",
                 "version": "Version",
                 "platform": "Platform",
+                "time_spent": "Time Spent",
                 "memo": "Memo",
                 "memo_placeholder": "Click to add a memo"
             },
