--- a/html/src/localization/fr/en.json
+++ b/html/src/localization/fr/en.json
@@ -806,6 +806,7 @@
                 "last_updated": "Dernière mise à jour",
                 "version": "Version",
                 "platform": "Plateforme",
+                "time_spent": "Temps passé",
                 "memo": "Mémo",
                 "memo_placeholder": "Cliquez pour ajouter un mémo"
             },
