--- a/src/localization/zh-CN/en.json
+++ b/src/localization/zh-CN/en.json
@@ -11,6 +11,7 @@
         "moderation": "用户管理（屏蔽 / 静音）",
         "notification": "通知",
         "friend_list": "好友列表",
+        "charts": "图表",
         "profile": "个人信息",
         "settings": "设置"
     },
@@ -216,6 +217,18 @@
             "refresh_tooltip": "刷新",
             "clear_tooltip": "清除结果",
             "cancel_tooltip": "取消"
+        },
+        "charts": {
+            "header": "图表",
+            "instance_activity": {
+                "header": "Instance Activity",
+                "total_online_time": "在线时长",
+                "bar_width": "柱条宽度",
+                "previous_day": "前一天",
+                "next_day": "后一天",
+                "refresh": "点击刷新",
+                "settings": "设置"
+            }
         },
         "profile": {
             "profile": {
