--- a/src/localization/en/en.json
+++ b/src/localization/en/en.json
@@ -326,6 +326,7 @@
                     "auto_invite_request_accept_favs": "All Favorites",
                     "auto_invite_request_accept_selected_favs": "VRCX Favorites"
                 },
+
                 "legal_notice": {
                     "header": "Legal Notice",
                     "info": "VRCX is an assistant application for VRChat that provides information about and managing friendship. This application makes use of the unofficial VRChat API SDK.",
@@ -542,6 +543,12 @@
                         "enable": "Enable",
                         "enable_tooltip": "Requires SteamVR overlay to be enabled",
                         "dance_world_only": "Supported world only"
+                    },
+                    "launch_commands": {
+                        "header": "Launch Commands / Deeplinks",
+                        "show_confirmation_on_switch_avatar_enable": "Show confirmation diaglog before switching avatars",
+                        "focus_on_switch_avatar_enable": "Focus VRCX when switching avatars",
+                        "focus_on_switch_avatar_tooltip": "This will bring VRCX to the front when switching avatars.\nThis is useful for see if the request was successful."
                     },
                     "screenshot_helper": {
                         "header": "Screenshot Helper",
