--- a/src/localization/en/en.json
+++ b/src/localization/en/en.json
@@ -222,15 +222,23 @@
             "header": "Charts",
             "instance_activity": {
                 "header": "Instance Activity",
-                "total_online_time": "Total Online Time",
+                "online_time": "Online Time",
                 "previous_day": "Previous Day",
                 "next_day": "Next Day",
                 "refresh": "Refresh",
+                "tips": {
+                    "header": "Tips",
+                    "online_time": "Online time refers to the game time recorded by VRCX for the current day.",
+                    "click_Y_axis": "Click Y-axis label to open user/world dialog.",
+                    "click_instance_name": "Click instance name for previous instance info.",
+                    "accuracy_notice": "Info from local database may not be accurate"
+                },
                 "settings": {
                     "header": "Settings",
                     "bar_width": "Bar Width",
                     "show_solo_instance": "Show Solo Instance",
-                    "show_no_friend_instance": "Show No Friend Instance"
+                    "show_no_friend_instance": "Show No Friend Instance",
+                    "show_detail": "Show Detail"
                 }
             }
         },
