--- a/src/localization/ja/en.json
+++ b/src/localization/ja/en.json
@@ -229,8 +229,8 @@
                 "tips": {
                     "header": "ヒント",
                     "online_time": "オンライン時間とは、VRCXが記録した当日のゲームプレイ時間です。",
-                    "click_Y_axis": "Y軸ラベルをクリックでプレイヤー/ワールドダイアログを表示できます。",
-                    "click_instance_name": "インスタンス名をクリックで以前のインスタンス情報ダイアログを表示できます。",
+                    "click_Y_axis": "Y軸ラベルをクリックで、インスタンスの詳細へジャンプ、またはユーザーダイアログを表示できます。",
+                    "click_instance_name": "インスタンス名をクリックで、以前のインスタンス情報ダイアログを表示できます。",
                     "accuracy_notice": "ローカルデータベースからの情報であり、正確ではない可能性があります。"
                 },
                 "settings": {
