--- a/src/localization/zh-CN/en.json
+++ b/src/localization/zh-CN/en.json
@@ -229,7 +229,7 @@
                 "tips": {
                     "header": "提示",
                     "online_time": "在线时间是指VRCX记录的当天的游戏时间。",
-                    "click_Y_axis": "点击Y轴标签打开“玩家”、“世界”对话框。",
+                    "click_Y_axis": "点击Y轴标签可以跳转到相应房间详情，或者打开“玩家”对话框。",
                     "click_instance_name": "点击房间名称打开“曾加入的房间信息”对话框。",
                     "accuracy_notice": "本地数据库的数据可能不准确。"
                 },
